# CUDA_lab

./: .gitignore  README.md  bitmap.hpp  bitmap_test.cpp  common.hpp  factor.cu  friend_template.cpp  mandelbrot.cpp  matrix.cu  matrix3x3.cpp  matrix3x3_mat.cpp  matrix_add.cu  matrix_add_1d.cu  matrix_add_2d.cu  matrix_add_3d.cu  matrix_mult_2d.cu  max_thread.cu  pngwriter.hpp  pngwriter_test.cpp  push.bat  template.exp  template.hpp  template.lib  template_test.cu  template_test.exp  template_test.lib  test.cu  vector_add.cu
cuda_lab/: .gitignore  CMakeLists.txt  a.exp  a.lib  main.cpp  template_test.cu
cuda_lab/googletest-master/.github/workflows/: gtest-ci.yml
cuda_lab/googletest-master/ci/: linux-presubmit.sh
cuda_lab/googletest-master/docs/: advanced.md  faq.md  gmock_cook_book.md  primer.md
cuda_lab/googletest-master/docs/reference/: actions.md  matchers.md  testing.md
cuda_lab/googletest-master/googlemock/: CMakeLists.txt
cuda_lab/googletest-master/googlemock/src/: gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc
cuda_lab/googletest-master/googlemock/test/: gmock-actions_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-port_test.cc  gmock-pp_test.cc  (+7 more)
cuda_lab/googletest-master/googletest/: CMakeLists.txt
cuda_lab/include/: flat_matrix.hpp  matrix.hpp  template.hpp  vector.hpp  witold_matrix.hpp
cuda_lab/src/: matlab.cpp
cuda_lab/test/: main_test.cpp  test_matrix.cpp  test_vector.cpp  witold_matrix_test.cpp
(+107 files in other folders)
